2000-11-30  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmtrack/concepts.xml: Rename mandatory fields.
	Rewrite queries section.
	* doc/design/qmtrack/idb-api.xml: Edit.
	* doc/design/qmtrack/idb-impl.xml: New file.
	* doc/design/qmtrack/qmtrack.xml: Include idb-impl.xml.
	* doc/design/qmtrack/xml-repr.xml: Add ids and links.
	
2000-11-30  Alex Samuel  <samuel@codesourcery.com>

	* doc/qm-html.dsl (%section-autolabel%): Set to true.
	(chunk-skip-first-element-list): Set to empty list.

2000-11-29  Mark Mitchell  <mark@codesourcery.com>

	* doc/design/qmtest/qmtest.xml: Revise heavily, tightening
	prose, clarifying concepts, etc.
	* doc/design/qmtest/core.xml: Likewise.
	* doc/design/qmtest/impl.xml: Likewise.
	* doc/design/qmtest/req.xml: Likewise.

2000-11-29  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmtrack/qmtrack.xml: Make acronyms upper-case.
	(dtd): New entity.
	(xml): Likewise.
	Include xml-repr.xml.
	* doc/design/qmtrack/triggers.xml: Finish.
	* doc/design/qmtrack/xml-repr.xml: New file.
	* doc/design/qmtrack/user-interface.xml: Add id's.  Fix some
	indentation. 
	
2000-11-28  Mark Mitchell  <mark@codesourcery.com>

	* doc/design/qmtest/core.xml: Fix DocBook syntax errors.
	* doc/design/qmtest/impl.xml: Likewise.
	* doc/design/qmtest/qmtest.xml: Likewise.
	* doc/design/qmtest/refs.xml: Likewise.
	* doc/design/qmtest/req.xml: Likewise.
	* doc/design/qmtest/design.html: Remove.

2000-11-28  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmtrack/triggers.xml: New file.

2000-11-27  Benjamin Chelf  <chelf@codesourcery.com>

	* doc/design/qmtrack/qmtrack.xml: Add user-interface.xml.
	* doc/design/qmtrack/user-api.xml: Fix typos.
	* doc/design/qmtrack/user-interface.xml: New file.

2000-11-26  Alex Samuel  <samuel@codesourcery.com>
	
	* doc/design/qmtrack/idb-api.xml: Add missing </section> tag.
	
2000-11-26  Alex Samuel  <samuel@codesourcery.com>

	* doc/design/qmtrack/concepts.xml: Continue.