@@ -47,7 +47,7 @@ qmtrack [ options ] command [ command_options ] [ command_args ]
   to set. For example:
   <programlisting>
 <![CDATA[
-$ qmtrack create SUMMARY="My first issue" CATEGORIES+simple+first
+$ qmtrack create SUMMARY="My first issue" CATEGORIES+=simple CATEGORIES+=first
 2
 $ 
 ]]>
@@ -65,14 +65,14 @@ $
     </listitem>
 
     <listitem>
-     <para>+ : Add the given value to the set of values in the field
-     (e.g. CATEGEORY+value). This should only be used on fields that
+     <para>+= : Add the given value to the set of values in the field
+     (e.g. CATEGEORY+=value). This should only be used on fields that
      contain sets of values.</para>
     </listitem>
 
     <listitem>
-     <para>- : Remove the given value to the set of values in the field
-     (e.g. CATEGORY-value). This should only be used on fields that
+     <para>-= : Remove the given value to the set of values in the field
+     (e.g. CATEGORY-=value). This should only be used on fields that
      contain sets of values.</para>
     </listitem>
    </itemizedlist>
@@ -84,8 +84,8 @@ $
   arguments any fields you wish to edit. For example:
   <programlisting>
 <![CDATA[
-$ qmtrack edit 2 CATEGORIES-first
-SUCCESS: Edited ID 2. New revision = 2.
+$ qmtrack edit 2 CATEGORIES-=first
+SUCCESS: Edited ID 2.
 $ 
 ]]>
   </programlisting>
@@ -112,12 +112,11 @@ $
   arguments any fields you wish to edit. For example:
   <programlisting>
 <![CDATA[
-$ qmtrack query -v -r DATE "October 5, 2000" "October 7, 2000"
+$ qmtrack query -v INSERT NEW QUERY SYNTAX HERE
 QUERY RESULTS:
 1 issue
 
-Issue #2, summary "My first issue", last updated "October 6, 2000",
-current revision 2
+Issue 2, Summary "My first issue", Last updated "October 6, 2000"
 
 $ 
 ]]>
@@ -148,6 +147,8 @@ $
       <entry><literal>-vvv</literal></entry>
       <entry>Most verbose.</entry>
      </row>
+
+<!-- For now commented out until we have a new way of querying.
      <row>
       <entry><literal>-e</literal></entry>
       <entry>Match exactly. Following this flag is the
@@ -203,6 +204,8 @@ $
       criteria. The opposite of the given criteria is reported when this
       flag preceeds that query flag.</entry>
      </row>
+-->
+
     </tbody>
    </tgroup>
   </informaltable>
@@ -212,26 +215,114 @@ $
   <title id="sec-email-title">Email</title>
 
   <para>To create, edit, and query issues via email, simply construct an
-  email with lines similar to headers in an email message and send the
-  message to the database. It will respond with the same information that
-  would be given on the command line had the request been issued that
-  way. The first line of the email should contain the command
-  (e.g. <literal>create</literal>, <literal>edit</literal>, or
-  <literal>query</literal>). For the creation and editing commands,
-  subsequent lines will contain pairs of fields and values separated by a
-  colon. For the edit command, one of the fields listed must contain the ID
-  of the issue to be edited. For example, an email to edit ID number 2
-  would look like the following:
-   <programlisting>
+  email in xml as shown below and send the message to the database. It
+  will respond with the same information that would be given on the
+  command line had the request been issued that way. The first line of the
+  email should contain the command (e.g. <literal>create</literal>,
+  <literal>edit</literal>, or <literal>query</literal>). You may then
+  either give the command as you would on the command line, or you may
+  specify it using an xml representation. For example, to create a new
+  issue, you can send an email with this body:
+  
+  <programlisting>
 <![CDATA[
-edit
-ID:2
-SUMMARY:="New summary"
-CATEGORY:+foo-bar
+  create SUMMARY="My issue" CATEGORIES+="foo" CATEGORIES+="bar"
 ]]>
-   </programlisting>
-  Notice how the same three characters, '=', '+', and '-' are used to
-  update the fields via email just as they were on the command line.</para>
+  </programlisting>
+
+  or with this body:
+
+  <programlisting>
+<![CDATA[
+  create
+  <issue>
+    <summary>My issue</summary>
+    <categories>foo</categories>
+    <categories>bar</categories>
+  </issue>
+  ]]>
+  </programlisting>
+
+  Either way, you would receive an email back containing the text:
+
+  <programlisting>
+<![CDATA[
+  Issue Created:
+
+  <issue>
+    <id>2</id>
+    <summary>My issue</summary>
+    <categories>foo</categories>
+    <categories>bar</categories>
+  </issue>
+  ]]>
+  </programlisting>
+
+  indicating that the issue has been created. To edit an issue, you may
+  either give the command line for editing the issue or request that the
+  issue be sent back to you for editing and subsequently send it back
+  after you have edited it. For example, to remove the category, foo, from
+  the issue we just created, you could send the following message:
+
+  <programlisting>
+<![CDATA[
+  edit 2 CATEGORIES-=foo
+  ]]>
+  </programlisting>
+
+  or you could send the following message:
+
+  <programlisting>
+<![CDATA[
+  retrieve 2 for edit
+  ]]>
+  </programlisting>
+
+  This would cause the database to send you the following message:
+  <programlisting>
+<![CDATA[
+  edit
+  <issue>
+    <id>2</id>
+    <summary>My issue</summary>
+    <categories>foo</categories>
+    <categories>bar</categories>
+  </issue>
+  ]]>
+  </programlisting>
+
+  which you would then edit to look like:
+
+  <programlisting>
+<![CDATA[
+  edit
+  <issue>
+    <id>2</id>
+    <summary>My issue</summary>
+    <categories>bar</categories>
+  </issue>
+  ]]>
+  </programlisting>
+
+  (removing the category "foo") and send back to the database. In either
+  case, you after the edit is complete, you would receive a message that
+  looked like this:
+
+  <programlisting>
+<![CDATA[
+  Issue edited:
+
+  <issue>
+    <id>2</id>
+    <summary>My issue</summary>
+    <categories>bar</categories>
+  </issue>
+  ]]>
+  </programlisting>
+
+
+  INSERT QUERY INFO HERE.
+<!-- Commented out for now until we know what's up with queries
 
   <para>Queries are similar to edits and creates with the exception that
   the field lines must contain additional information to indicate what type
@@ -251,29 +342,115 @@ SUMMARY:contains:"foo"
 CATEGORY:exact:"bar"
 ]]>
    </programlisting>
+
+-->
   </para>
  </section>
 
  <section><title>Web</title>
   <para>To create, edit, and perform queries on the web, the user will be
-  presented with a form that has all the fields of an issue. He/she will
-  be able to fill in the form as desired and then click any of the three
-  buttons, create, edit, and query to perform the desired function. To
-  create an issue, all fields may be specified except for the ID field,
-  the revision field, and the date field. These will be updated
-  automatically. The same holds for editing with one exception. When
-  perfoming an edit, it is likely that the user will like to retrieve the
-  information in the ID before he/she edits it. Therefore, after inputting
-  the correct ID in the ID text box and clicking "Retrieve Issue", the
-  form will fill with the latest revision of the issue to be edited. This
-  may also be useful when performing queries. The user will notice that a
-  select box will be available next to every field in the form. This is to
-  specify how to search on that field (e.g. exact, contains, less,
-  greater, or range depending on the type of the field). Also, buttons at
-  the bottom for "and," "or," and "not" will be available to combine
-  multiple queries in a logical fashion. When the "and" or "or" button is
-  pressed, another form will be loaded so that two (or more) queries can
-  be made simultaneously and their results combined as desired. </para>
+  presented with a form that has all the fields of an issue. This form
+  will be generated by DTML using the special dtml-in tag that iterates
+  over all the elements in a list (in this case, the fields of the
+  issue). For more information about DTML and the dtml-in tag, see
+  http://www.zope.org/Documentation/Guides/DTML. The dtml code to display
+  the forms will be similar to the following:
+
+  <programlisting>
+<![CDATA[
+  <table>
+  <dtml-in fields>
+  <tr><td><dtml-var name></td>
+      <td><dtml-expr "get_display"></td>
+  </tr>
+]]>
+  </programlisting>
+
+  where for each field, the field name is displayed and then the method
+  get_display is called on each field to determine the way the field
+  should be displayed (e.g., as a text box, as a set of check boxes,
+  etc.). For querying, another line is added to the above to extract from
+  the field what choices for querying the user has (e.g., exact match
+  versus substring match, less than versus greater than, etc.). Using
+  DTML, the administrator will be able to specify headers and footers and
+  other configuration-type information simply so the web interface looks
+  and feels the way the administrator wishes.</para>
+
+  <para>To create a new issue, the user will be presented with a form like
+  the following:
+  
+  <mediaobject>
+  <imageobject>
+  <imagedata fileref="create1.jpg" format="JPG"></imagedata>
+  </imageobject>
+  </mediaobject>
+
+  He/she will then fill in the necessary data, click "Create," and be
+  shown a page like the following:
+
+  <mediaobject>
+  <imageobject>
+  <imagedata fileref="create2.jpg" format="JPG"></imagedata>
+  </imageobject>
+  </mediaobject>
+
+  To edit, the user will be presented with a form like this:
+
+  <mediaobject>
+  <imageobject>
+  <imagedata fileref="edit1.jpg" format="JPG"></imagedata>
+  </imageobject>
+  </mediaobject>
+
+  He/she will then fill in the ID of the issue to edited and click on
+  "Retrieve." This will fill in the form with the issue:
+
+  <mediaobject>
+  <imageobject>
+  <imagedata fileref="edit2.jpg" format="JPG"></imagedata>
+  </imageobject>
+  </mediaobject>
+
+  Then the user can edit it and click on "Edit" to commit the changes
+  made. After doing this, the user will be presented with a page like the
+  following:
+
+  <mediaobject>
+  <imageobject>
+  <imagedata fileref="edit3.jpg" format="JPG"></imagedata>
+  </imageobject>
+  </mediaobject>
+
+  To query, the user will be presented wiht a form like this:
+
+  <mediaobject>
+  <imageobject>
+  <imagedata fileref="query1.jpg" format="JPG"></imagedata>
+  </imageobject>
+  </mediaobject>
+
+  Then the user can simply put values in the fields as desired, choosing
+  how to search on each field with the given pull down menus. (Each field
+  type has a set of "ways to search" that are determined and used to
+  generate the pull down menus.) Once the user inputs the data and clicks
+  "Query":
+
+  <mediaobject>
+  <imageobject>
+  <imagedata fileref="query2.jpg" format="JPG"></imagedata>
+  </imageobject>
+  </mediaobject>
+
+  the following page is returned:
+
+  <mediaobject>
+  <imageobject>
+  <imagedata fileref="query3.jpg" format="JPG"></imagedata>
+  </imageobject>
+  </mediaobject>
+
+  The user may then refine the search to enforce additional constraints.
+  </para>
  </section>
 </chapter>
 
