@@ -1,3 +1,8 @@
+2000-11-30  Benjamin Chelf  <chelf@codesourcery.com>
+
+	* doc/design/qmtrack/user-interface.xml: Update to contain new
+	ideas for interfaces.
+
 2000-11-30  Alex Samuel  <samuel@codesourcery.com>
 
 	* doc/design/qmtrack/concepts.xml: Rename mandatory fields.
